--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -854,20 +854,49 @@
             data-id="1_5"
             slot="welcome-section_1_0"
     >
-        <div class='section_content'>
-            <div class='hasAnimation section_content_item_0'>
-                <div class='section_content_header'>
-                    <p class='section_content_header_p_left'></p>
-                    <p class='section_content_header_p'>Дресс-код</p>
-                    <p class='section_content_header_p_right'></p>
+        <div class="section_content">
+            <div class="hasAnimation section_content_item_0" style="">
+                <div class="section_content_header--gray">
+                    <p class="section_content_header_p_left"></p>
+                    <p class="section_content_header_p">Дресс-код</p>
+                    <p class="section_content_header_p_right"></p>
                 </div>
-                <div class='section_content_body'>
-                    <p class='section_content_body_p  notFound has-animation'>
-                        РАЗДЕЛ в разработке
-                    </p>
+                <div class="section_content_body--gray">
+                    <div class="section_content_body--center--padding_0--gray">
+                        <div class="content__welcome-section_2_0--justify-content_space-between--row-gap_50">
+                            <div class="card__welcome-section--width_950--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
+                                <div class="image__welcome-section_2_0">
+                                    <img src="./this/img/sections/1/5/cotton-polo.svg">
+                                </div>
+                                <div class="description__welcome-section_2_0">
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left--font-size_24--width_83%">
+                                            У нас нет жёстких правил, регламентирующих внешний вид сотрудников, однако при выборе одежды следует помнить о нормах, принятых в общественных местах.
+                                        </p>
+                                        <p class="paragraph--left--font-size_24--margin-top_8--width_70%">
+                                            В офисах есть шкафы, куда можно убрать верхнюю одежду вместе с уличной обувью.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card__welcome-section--flex-direction_column--width_626--gap_27--border-radius_20--padding_80_88--background_main">
+                                <div class="image__welcome-section_2_0">
+                                    <img src="./this/img/sections/1/5/wave-blazer.svg">
+                                </div>
+                                <div class="description__welcome-section_2_0--text-align">
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left--font-size_24--color_white">
+                                            Если же предстоит встреча <br> с партнёрами компании или участие <br> в деловых мероприятиях <br> и совещаниях, то официальный <br> стиль в одежде обязателен.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class='section_content_item_img_1_5'></div>
+            <div class="section_content_item_img_1_5" style=""></div>
         </div>
     </welcome-section>
 
@@ -877,20 +906,49 @@
             data-id="1_6"
             slot="welcome-section_1_0"
     >
-        <div class='section_content'>
-            <div class='hasAnimation section_content_item_0'>
-                <div class='section_content_header'>
-                    <p class='section_content_header_p_left'></p>
-                    <p class='section_content_header_p'>зарплата и отпуск</p>
-                    <p class='section_content_header_p_right'></p>
+        <div class="section_content">
+            <div class="hasAnimation section_content_item_0">
+                <div class="section_content_header--gray">
+                    <p class="section_content_header_p_left"></p>
+                    <p class="section_content_header_p">зарплата и отпуск</p>
+                    <p class="section_content_header_p_right"></p>
                 </div>
-                <div class='section_content_body'>
-                    <p class='section_content_body_p  notFound has-animation'>
-                        РАЗДЕЛ в разработке
-                    </p>
+                <div class="section_content_body--gray">
+                    <div class="section_content_body--center--padding_0--gray">
+                        <div class="content__welcome-section_2_0--justify-content_space-between--row-gap_50">
+                            <div class="card__welcome-section--width_950--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
+                                <div class="image__welcome-section_2_0">
+                                    <img src="./this/img/sections/1/5/cotton-polo.svg">
+                                </div>
+                                <div class="description__welcome-section_2_0">
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left--font-size_24--width_83%">
+                                            У нас нет жёстких правил, регламентирующих внешний вид сотрудников, однако при выборе одежды следует помнить о нормах, принятых в общественных местах.
+                                        </p>
+                                        <p class="paragraph--left--font-size_24--margin-top_8--width_70%">
+                                            В офисах есть шкафы, куда можно убрать верхнюю одежду вместе с уличной обувью.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card__welcome-section--flex-direction_column--width_626--gap_27--border-radius_20--padding_80_88--background_main">
+                                <div class="image__welcome-section_2_0">
+                                    <img src="./this/img/sections/1/5/wave-blazer.svg">
+                                </div>
+                                <div class="description__welcome-section_2_0--text-align">
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left--font-size_24--color_white">
+                                            Если же предстоит встреча <br> с партнёрами компании или участие <br> в деловых мероприятиях <br> и совещаниях, то официальный <br> стиль в одежде обязателен.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class='section_content_item_img_1_6'></div>
+            <div class="section_content_item_img_1_6" style=""></div>
         </div>
     </welcome-section>
 
