--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -337,8 +337,8 @@
                             <li class="li__link" data-id="1_3">Наши ценности</li>
                             <li class="li__link" data-id="1_4">График работы</li>
                             <li class="li__link" data-id="1_5">Дресс-код</li>
-                            <li class="li__link" data-id="1_5">Зарплата и отпуск</li>
-                            <li class="li__link" data-id="1_6">Корпоративные преимущества</li>
+                            <li class="li__link" data-id="1_6">Зарплата и отпуск</li>
+                            <li class="li__link" data-id="1_7">Корпоративные преимущества</li>
                         </ul>
                     </div>
                 </div>
@@ -916,34 +916,50 @@
                 <div class="section_content_body--gray">
                     <div class="section_content_body--center--padding_0--gray">
                         <div class="content__welcome-section_2_0--justify-content_space-between--row-gap_50">
-                            <div class="card__welcome-section--width_950--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
+
+                            <div class="card__welcome-section--width_788--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
                                 <div class="image__welcome-section_2_0">
-                                    <img src="./this/img/sections/1/5/cotton-polo.svg">
+                                    <img src="./this/img/sections/1/6/money.svg">
                                 </div>
                                 <div class="description__welcome-section_2_0">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                        зарплата
+                                    </h4>
                                     <div class="paragraph__welcome-section_2_0">
                                         <p class="paragraph--left--font-size_24--width_83%">
-                                            У нас нет жёстких правил, регламентирующих внешний вид сотрудников, однако при выборе одежды следует помнить о нормах, принятых в общественных местах.
-                                        </p>
-                                        <p class="paragraph--left--font-size_24--margin-top_8--width_70%">
-                                            В офисах есть шкафы, куда можно убрать верхнюю одежду вместе с уличной обувью.
+                                            Зарплата выплачивается 2 раза в месяц: <br>за первую половину месяца - <br>
+                                            <span class="bold">25-го числа текущего месяца, </span><br>за вторую половину - <br>
+                                            <span class="bold--display_block--margin-bottom_8">10-го числа следующего месяца.</span>
+                                            В случае, если у тебя будут вопросы <br>
+                                            по расчету и выплате зарплаты, <br>
+                                            <span class="--display_block--margin-bottom_8">обращайся в бухгалтерию!</span>
+                                            <a class="link paragraph" href="https://vks.digitalms.ru">Подробнее ты можешь узнать тут</a>
                                         </p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="card__welcome-section--flex-direction_column--width_626--gap_27--border-radius_20--padding_80_88--background_main">
+                            <div class="card__welcome-section--width_788--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
                                 <div class="image__welcome-section_2_0">
-                                    <img src="./this/img/sections/1/5/wave-blazer.svg">
+                                    <img src="./this/img/sections/1/6/sunbed.svg">
                                 </div>
-                                <div class="description__welcome-section_2_0--text-align">
+                                <div class="description__welcome-section_2_0">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                        отпуск
+                                    </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24--color_white">
-                                            Если же предстоит встреча <br> с партнёрами компании или участие <br> в деловых мероприятиях <br> и совещаниях, то официальный <br> стиль в одежде обязателен.
+                                        <p class="paragraph--left--font-size_24--width_83%">
+                                            По законодательству ты имеешь право на отпуск <br>
+                                            <span class="bold">через 6 месяцев работы</span> в компании.<br>
+                                            Обычно отпуск делится на 2 части по 14 дней, <br>
+                                            но бывают отпуска «4 по 7» и «3 по 10»<br>
+                                            <span class="--display_block--margin-bottom_8">(мы же понятно объяснили?)</span>
+                                            В любом случае, если у тебя есть вопросы <br>по отпуску сначала обратись в отдел персонала, <br>а потом к своему Руководителю.
                                         </p>
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -958,20 +974,69 @@
             data-id="1_7"
             slot="welcome-section_1_0"
     >
-        <div class='section_content'>
-            <div class='hasAnimation section_content_item_0'>
-                <div class='section_content_header'>
-                    <p class='section_content_header_p_left'></p>
-                    <p class='section_content_header_p'>корпоративные преимущества</p>
-                    <p class='section_content_header_p_right'></p>
+        <div class="section_content">
+            <div class="hasAnimation section_content_item_0">
+                <div class="section_content_header--gray">
+                    <p class="section_content_header_p_left"></p>
+                    <p class="section_content_header_p">корпоративные преимущества</p>
+                    <p class="section_content_header_p_right"></p>
                 </div>
-                <div class='section_content_body'>
-                    <p class='section_content_body_p  notFound has-animation'>
-                        РАЗДЕЛ в разработке
-                    </p>
+                <div class="section_content_body--gray">
+                    <div class="section_content_body--center--padding_0--gray">
+                        <div class="content__welcome-section_2_0--justify-content_space-between--row-gap_50">
+
+                            <div class="card__welcome-section--width_788--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
+                                <div class="image__welcome-section_2_0">
+                                    <img src="./this/img/sections/1/7/hospital-sign.svg">
+                                </div>
+                                <div class="description__welcome-section_2_0">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                        дмс
+                                    </h4>
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left--font-size_24--width_83%">
+                                            После успешного прохождения испытательного срока тебе будет доступен ДМС. Мы сотрудничаем со страховой компанией <span class="bold">СОГАЗ</span> и предлагаем расширенный пакет со стоматологией.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card__welcome-section--width_788--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
+                                <div class="image__welcome-section_2_0">
+                                    <img src="./this/img/sections/1/7/house.svg">
+                                </div>
+                                <div class="description__welcome-section_2_0">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                        ипотека
+                                    </h4>
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left--font-size_24--width_83%">
+                                            Цифромед является аккредитованной</br>
+                                            IT-компанией, в связи с чем наши сотрудники могут получить ипотеку на льготных условиях.</br>
+                                            Подробнее ты можешь  <a class="link paragraph" href="https://vks.digitalms.ru">узнать тут</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="card__welcome-section_2_1--color_main--height_180">
+                                <div class="image__welcome-section_2_0">
+                                    <img src="/welcomebook/this/img/sections/2/1/profile.svg">
+                                </div>
+                                <div class="description__welcome-section_2_1--width_700">
+                                    Активные вакансии можно найти на нашей странице HH.ru
+                                </div>
+                                <div class="button__welcome-section_2_1">
+                                    <p class="paragraph--button">Смотреть</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class='section_content_item_img_1_7'></div>
+            <div class="section_content_item_img_1_7"></div>
         </div>
     </welcome-section>
 
