--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -1020,15 +1020,35 @@
                             </div>
 
 
-                            <div class="card__welcome-section_2_1--color_main--height_180">
-                                <div class="image__welcome-section_2_0">
-                                    <img src="/welcomebook/this/img/sections/2/1/profile.svg">
+                            <div class="card__welcome-section_2_1--color_main--height_180--justify-content_space-between--padding_0_104px_0_48px">
+                                <div class="data-image__welcome-section">
+                                    <div class="image__welcome-section_2_0">
+                                        <img src="./this/img/sections/1/7/glasses.svg">
+                                    </div>
+                                    <div class="description__welcome-section_1_7">
+                                        <p class="paragraph">КОРПОРАТИВНАЯ</p>
+                                        <p class="paragraph">ОНЛАЙН</p>
+                                        <p class="paragraph">БИБЛИОТЕКА</p>
+                                    </div>
                                 </div>
-                                <div class="description__welcome-section_2_1--width_700">
-                                    Активные вакансии можно найти на нашей странице HH.ru
+                                <div class="description__welcome-center_1_7">
+                                    <p class="paragraph">Для сотрудников компании доступны</p>
+                                    <p class="paragraph--font-size_24px--font-weight_400">1 000+ электронных книг и 500+ аудиокниг.</p>
+                                    <p class="paragraph">Скачивай в удобном формате на любом устройстве!</p>
                                 </div>
-                                <div class="button__welcome-section_2_1">
-                                    <p class="paragraph--button">Смотреть</p>
+                                <div class="button__container--display_flex--gap_16px">
+                                    <div class="wrapper-button__welcome-section_1_7">
+                                        <div class="button__welcome-section_2_1">
+                                            <p class="paragraph--button--text-decoration_none">МИФ</p>
+                                        </div>
+                                        <div class="button__welcome-section_2_1">
+                                            <p class="paragraph--button--text-decoration_none">Альпина</p>
+                                        </div>
+                                    </div>
+                                    <div class="description__welcome-center_1_7--align-items_center">
+                                        <p class="paragraph">Логин для регистрации –</p>
+                                        <p class="paragraph">твоя корпоративная почта</p>
+                                    </div>
                                 </div>
                             </div>
 
