--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -926,7 +926,7 @@
                                         зарплата
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24--width_83%">
+                                        <p class="paragraph--left--font-size_24">
                                             Зарплата выплачивается 2 раза в месяц: <br>за первую половину месяца - <br>
                                             <span class="bold">25-го числа текущего месяца, </span><br>за вторую половину - <br>
                                             <span class="bold--display_block--margin-bottom_8">10-го числа следующего месяца.</span>
@@ -948,9 +948,9 @@
                                         отпуск
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24--width_83%">
+                                        <p class="paragraph--left--font-size_22px">
                                             По законодательству ты имеешь право на отпуск <br>
-                                            <span class="bold">через 6 месяцев работы</span> в компании.<br>
+                                            <span class="bold--font-size_24px">через 6 месяцев работы</span> в компании.<br>
                                             Обычно отпуск делится на 2 части по 14 дней, <br>
                                             но бывают отпуска «4 по 7» и «3 по 10»<br>
                                             <span class="--display_block--margin-bottom_8">(мы же понятно объяснили?)</span>
@@ -1017,7 +1017,6 @@
                                     </div>
                                 </div>
                             </div>
-
 
                             <div class="card__welcome-section_2_1--color_main--height_180--justify-content_space-between--padding_0_104px_0_48px">
                                 <div class="data-image__welcome-section">
