--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -585,7 +585,7 @@
                     </p>
                 </div>
             </div>
-            <div class='section_content_item_img_1_1'></div>
+            <div class='section_content_item_img_1_0'></div>
         </div>
     </welcome-section>
 
@@ -603,17 +603,23 @@
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body--center'>
+                    <div class="background"></div>
                     <div class='class="content__welcome-section_1_2'>
                         <div class='section_content_card'>
                             <div class='section_content_card_top'>
-                                <div class='section_content_img'>
-                                    <img src="./this/img/sections/1/icons/00.png"/>
+                                <div class='logo__section_content_1_2'>
+                                    <div class='section_content_img'>
+                                        <img src="./this/img/sections/1/icons/00.png"/>
+                                    </div>
+                                    <div class='section_content_text'>
+                                        ФМБА <br>России
+                                    </div>
                                 </div>
-                                <div class='section_content_text'>
-                                    ФМБА России
-                                </div>
+<!--                                <div>-->
+<!--                                    <p class="paragraph">Автоматизация крупнейшей сети государственных клиник ФМБА России</p>-->
+<!--                                </div>-->
                             </div>
-                            <div style="display: none" class='section_content_card_bottom'>
+                            <div class='section_content_card_bottom'>
                                 Автоматизацией крупнейшей сети государственных клиник ФМБА России
                             </div>
                         </div>
@@ -664,7 +670,7 @@
                     </div>
                 </div>
             </div>
-            <div class='section_content_item_img_1_2'></div>
+            <div class='section_content_item_img_1_0'></div>
         </div>
     </welcome-section>
 
@@ -745,7 +751,7 @@
                     </div>
                 </div>
             </div>
-            <div class='section_content_item_img_1_3'></div>
+            <div class='section_content_item_img_1_0'></div>
         </div>
     </welcome-section>
 
@@ -844,7 +850,7 @@
 
                 </div>
             </div>
-            <div class='section_content_item_img_1_4'></div>
+            <div class='section_content_item_img_1_0'></div>
         </div>
     </welcome-section>
 
@@ -896,7 +902,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section_content_item_img_1_5" style=""></div>
+            <div class="section_content_item_img_1_0" style=""></div>
         </div>
     </welcome-section>
 
@@ -963,7 +969,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section_content_item_img_1_6" style=""></div>
+            <div class="section_content_item_img_1_0" style=""></div>
         </div>
     </welcome-section>
 
@@ -1054,7 +1060,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section_content_item_img_1_7"></div>
+            <div class="section_content_item_img_1_0"></div>
         </div>
     </welcome-section>
 
@@ -1154,7 +1160,7 @@
                     </div>
                 </div>
             </div>
-            <div class='section_content_item_img_2_0'></div>
+            <div class='section_content_item_img_1_0'></div>
         </div>
     </welcome-section>
 
@@ -1193,7 +1199,7 @@
                     </div>
                 </div>
             </div>
-            <div class='section_content_item_img_2_1'></div>
+            <div class='section_content_item_img_1_0'></div>
         </div>
     </welcome-section>
 
@@ -1276,7 +1282,7 @@
                     </div>
                 </div>
             </div>
-            <div class='section_content_item_img_2_1'></div>
+            <div class='section_content_item_img_1_0'></div>
         </div>
     </welcome-section>
 
@@ -1371,7 +1377,7 @@
                     </div>
                 </div>
             </div>
-            <div class='section_content_item_img_3_0'></div>
+            <div class='section_content_item_img_1_0'></div>
         </div>
     </welcome-section>
 
@@ -1448,7 +1454,7 @@
                     </div>
                 </div>
             </div>
-            <div class='section_content_item_img_3_1'></div>
+            <div class='section_content_item_img_1_0'></div>
         </div>
     </welcome-section>
 
