--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -615,35 +615,21 @@
                                         ФМБА <br>России
                                     </div>
                                 </div>
-<!--                                <div>-->
-<!--                                    <p class="paragraph">Автоматизация крупнейшей сети государственных клиник ФМБА России</p>-->
-<!--                                </div>-->
                             </div>
-                            <div class='section_content_card_bottom'>
+                            <div style="display: none" class='section_content_card_bottom'>
                                 Автоматизацией крупнейшей сети государственных клиник ФМБА России
                             </div>
                         </div>
                         <div class='section_content_card'>
-                            <div class='section_content_card_top section_2'>
-                                <div class='section_content_card_top section_2_height'>
-                                    <img src="./this/img/sections/1/icons/01.png"/>
-                                </div>
-                                <div class='section_content_text_2'>
-                                    <p class='section_content_text_2_0'>Федеральный фонд</p>
-                                    <p class='section_content_text_2_1'>Обязательного медицинского страхования</p>
-                                </div>
-                            </div>
-                            <div style="display: none" class='section_content_card_bottom'>
-                                Созданием и развитием подсистем и компонентов ГИС ОМС
-                            </div>
-                        </div>
-                        <div class='section_content_card'>
                             <div class='section_content_card_top'>
-                                <div class='section_content_img'>
-                                    <img src="./this/img/sections/1/icons/04.svg"/>
-                                </div>
-                                <div class='section_content_text'>
-                                    ЕГИСЗ
+                                <div class='logo__section_content_1_2'>
+                                    <div class='section_content_card_top section_2_height'>
+                                        <img src="./this/img/sections/1/icons/01.png"/>
+                                    </div>
+                                    <div class='section_content_text_2'>
+                                        <p class='section_content_text_2_0'>Федеральный фонд</p>
+                                        <p class='section_content_text_2_1'>Обязательного медицинского <br>страхования</p>
+                                    </div>
                                 </div>
                             </div>
                             <div style="display: none" class='section_content_card_bottom'>
@@ -652,7 +638,23 @@
                         </div>
                         <div class='section_content_card'>
                             <div class='section_content_card_top'>
-                                <img src="./this/img/sections/1/icons/02.svg"/>
+                                <div class='logo__section_content_1_2'>
+                                    <div class='section_content_card_top section_2_height'>
+                                        <img src="./this/img/sections/1/icons/04.svg"/>
+                                    </div>
+                                    <div class='section_content_text_2'>
+                                        <p class='section_content_text_2_0'>ЕГИСЗ</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div style="display: none" class='section_content_card_bottom'>
+                                Автоматизацией крупнейшей сети государственных клиник ФМБА России
+                            </div>
+                        </div>
+
+                        <div class='section_content_card'>
+                            <div class='section_content_card_top'>
+                                <img class="--border-radius_10px" src="./this/img/sections/1/icons/02.svg"/>
                             </div>
                             <div style="display: none" class='section_content_card_bottom'>
                                 Развитием кабинета Здоровье на Портале госуслуг совместно с Минцифрой России
@@ -663,7 +665,7 @@
                             <div class='section_content_card_top_3'>
                                 <p class='section_content_card_top_logo_3'>ЕЦК</p>
                             </div>
-                            <div style="display: none"  class='section_content_card_bottom'>
+                            <div style="display: none" class='section_content_card_bottom'>
                                 Развитием Единого цифрового контура на базе продуктов дочерних копаний
                             </div>
                         </div>
