--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -572,7 +572,7 @@
             data-id="1_1"
             slot="welcome-section_1_0"
     >
-        <div class='section_content'>
+        <div class='section_content hasAnimation'>
             <div>
                 <slot name="welcome-diagram-0"></slot>
             </div>
