--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -576,7 +576,7 @@
             <div>
                 <slot name="welcome-diagram-0"></slot>
             </div>
-<!--            <div class='section_content_item_img_1_0'></div>-->
+            <div class='section_content_item_img_6_0'></div>
         </div>
 
         <welcome-diagram slot="welcome-diagram-0">
