--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -573,10 +573,10 @@
             slot="welcome-section_1_0"
     >
         <div class='section_content hasAnimation'>
-            <div>
+            <div class="diagram__section_content_1_1">
                 <slot name="welcome-diagram-0"></slot>
             </div>
-            <div class='section_content_item_img_6_0'></div>
+            <div class='section_content_item_img_1_0'></div>
         </div>
 
         <welcome-diagram slot="welcome-diagram-0">
