--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -581,6 +581,15 @@
 
         <welcome-diagram slot="welcome-diagram-0">
             <div class='section_content_body_ecp_1_0'>
+<!--                <section class="chart">-->
+<!--                    <div class="triangle" style="transform:rotate(   0deg)"><div class="circle" style="background:#ff7f00"></div></div>-->
+<!--                    <div class="triangle" style="transform:rotate( -60deg)"><div class="circle" style="background:#ff0000"></div></div>-->
+<!--                    <div class="triangle" style="transform:rotate(-120deg)"><div class="circle" style="background:#9400d3"></div></div>-->
+<!--                    <div class="triangle" style="transform:rotate(-180deg)"><div class="circle" style="background:#4b0082"></div></div>-->
+<!--                    <div class="triangle" style="transform:rotate(-180deg)"><div class="circle" style="background:#0000ff"></div></div>-->
+<!--                    <div class="triangle" style="transform:rotate(-240deg)"><div class="circle" style="background:#00ff00"></div></div>-->
+<!--                    <div class="triangle" style="transform:rotate(-300deg)"><div class="circle" style="background:#ffff00"></div></div>-->
+<!--                </section>-->
                 <div class='section_content_body_diagram'>
                     <div class="diagram_section_0">
                         <img class="diagram_section_0_img" src="./this/img/diagram/section/s_0.svg"/>
