--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -572,24 +572,30 @@
             data-id="1_1"
             slot="welcome-section_1_0"
     >
-        <div class='section_content hasAnimation'>
-            <div class="diagram__section_content_1_1">
-                <slot name="welcome-diagram-0"></slot>
+        <div class='section_content'>
+            <div class='hasAnimation section_content_item_0'>
+                <div class='section_content_header'>
+                    <p class='section_content_header_p_left'></p>
+                    <p class='section_content_header_p'>Единая цифровая платформа</p>
+                    <p class='section_content_header_p_right'></p>
+                </div>
+                <div class='section_content_body'>
+                    <slot name="welcome-diagram-0"></slot>
+                </div>
             </div>
-            <div class='section_content_item_img_1_0'></div>
+            <div class="section_content_item_img_1_0"></div>
         </div>
-
         <welcome-diagram slot="welcome-diagram-0">
             <div class='section_content_body_ecp_1_0'>
-<!--                <section class="chart">-->
-<!--                    <div class="triangle" style="transform:rotate(   0deg)"><div class="circle" style="background:#ff7f00"></div></div>-->
-<!--                    <div class="triangle" style="transform:rotate( -60deg)"><div class="circle" style="background:#ff0000"></div></div>-->
-<!--                    <div class="triangle" style="transform:rotate(-120deg)"><div class="circle" style="background:#9400d3"></div></div>-->
-<!--                    <div class="triangle" style="transform:rotate(-180deg)"><div class="circle" style="background:#4b0082"></div></div>-->
-<!--                    <div class="triangle" style="transform:rotate(-180deg)"><div class="circle" style="background:#0000ff"></div></div>-->
-<!--                    <div class="triangle" style="transform:rotate(-240deg)"><div class="circle" style="background:#00ff00"></div></div>-->
-<!--                    <div class="triangle" style="transform:rotate(-300deg)"><div class="circle" style="background:#ffff00"></div></div>-->
-<!--                </section>-->
+                <section class="chart">
+                    <div class="triangle" style="transform:rotate(   0deg)"><div class="circle" style="background:#ff7f00"></div></div>
+                    <div class="triangle" style="transform:rotate( -60deg)"><div class="circle" style="background:#ff0000"></div></div>
+                    <div class="triangle" style="transform:rotate(-120deg)"><div class="circle" style="background:#9400d3"></div></div>
+                    <div class="triangle" style="transform:rotate(-180deg)"><div class="circle" style="background:#4b0082"></div></div>
+                    <div class="triangle" style="transform:rotate(-180deg)"><div class="circle" style="background:#0000ff"></div></div>
+                    <div class="triangle" style="transform:rotate(-240deg)"><div class="circle" style="background:#00ff00"></div></div>
+                    <div class="triangle" style="transform:rotate(-300deg)"><div class="circle" style="background:#ffff00"></div></div>
+                </section>
                 <div class='section_content_body_diagram'>
                     <div class="diagram_section_0">
                         <img class="diagram_section_0_img" src="./this/img/diagram/section/s_0.svg"/>
