--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -586,17 +586,16 @@
             <div class="section_content_item_img_1_0"></div>
         </div>
         <welcome-diagram slot="welcome-diagram-0">
-            <div class='section_content_body_ecp_1_0'>
-                <section class="chart">
-                    <div class="triangle" style="transform:rotate(   0deg)"><div class="circle" style="background:#ff7f00"></div></div>
-                    <div class="triangle" style="transform:rotate( -60deg)"><div class="circle" style="background:#ff0000"></div></div>
-                    <div class="triangle" style="transform:rotate(-120deg)"><div class="circle" style="background:#9400d3"></div></div>
-                    <div class="triangle" style="transform:rotate(-180deg)"><div class="circle" style="background:#4b0082"></div></div>
-                    <div class="triangle" style="transform:rotate(-180deg)"><div class="circle" style="background:#0000ff"></div></div>
-                    <div class="triangle" style="transform:rotate(-240deg)"><div class="circle" style="background:#00ff00"></div></div>
-                    <div class="triangle" style="transform:rotate(-300deg)"><div class="circle" style="background:#ffff00"></div></div>
+            <div class='container__welcome-section_1_1'>
+                <section class="chart__welcome-section_1_1">
+                    <div class="triangle" style="transform:rotate(-30deg)"><div class="circle--odd" ></div></div>
+                    <div class="triangle" style="transform:rotate( -90deg)"><div class="circle--even" ></div></div>
+                    <div class="triangle" style="transform:rotate(-150deg)"><div class="circle--odd" ></div></div>
+                    <div class="triangle" style="transform:rotate(-210deg)"><div class="circle--even" ></div></div>
+                    <div class="triangle" style="transform:rotate(-270deg)"><div class="circle--odd" ></div></div>
+                    <div class="triangle" style="transform:rotate(-330deg)"><div class="circle--even" ></div></div>
                 </section>
-                <div class='section_content_body_ecp_list_1_0'>
+                <div class='description__welcome-section_1_1'>
                     <h3>ЕЦП. МИС</h3>
                     <p>медицинская</p>
                     <p>информационная система</p>
