--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -588,12 +588,25 @@
         <welcome-diagram slot="welcome-diagram-0">
             <div class='container__welcome-section_1_1'>
                 <section class="chart__welcome-section_1_1">
-                    <div class="triangle" style="transform:rotate(-30deg)"><div class="circle--odd" ></div></div>
-                    <div class="triangle" style="transform:rotate( -90deg)"><div class="circle--even" ></div></div>
-                    <div class="triangle" style="transform:rotate(-150deg)"><div class="circle--odd" ></div></div>
-                    <div class="triangle" style="transform:rotate(-210deg)"><div class="circle--even" ></div></div>
-                    <div class="triangle" style="transform:rotate(-270deg)"><div class="circle--odd" ></div></div>
-                    <div class="triangle" style="transform:rotate(-330deg)"><div class="circle--even" ></div></div>
+                    <div class="triangle_0">
+                        <div class="circle--odd"></div>
+                    </div>
+                    <div class="triangle_1">
+                        <div class="circle--even"></div>
+                    </div>
+                    <div class="triangle_2">
+                        <div class="circle--odd"></div>
+                    </div>
+                    <div class="triangle_3">
+                        <div class="circle--even"></div>
+                    </div>
+                    <div class="triangle_4">
+                        <div class="circle--odd"></div>
+                    </div>
+                    <div class="triangle_5">
+                        <div class="circle--even"></div>
+                    </div>
+
                 </section>
                 <div class='description__welcome-section_1_1'>
                     <h3>ЕЦП. МИС</h3>
