--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -715,12 +715,35 @@
 
                 </section>
                 <div class='description__welcome-section_1_1'>
-                    <h3>ЕЦП. МИС</h3>
-                    <p>медицинская</p>
-                    <p>информационная система</p>
-                    <p>цифровое решение</p>
-                    <p>для медицинских организаций</p>
+                  <slot name="description"></slot>
                 </div>
+            </div>
+            <div data-exclusion  class='description__welcome-diagram_1_1'>
+                <h3>ЕЦП. МИС</h3>
+                <p>медицинская</p>
+                <p>информационная система</p>
+                <p>цифровое решение</p>
+                <p>для медицинских организаций</p>
+            </div>
+            <div data-exclusion class='description__welcome-diagram_1_1'>
+                <h3>ЛИС</h3>
+                <p>медицинская</p>
+            </div>
+            <div data-exclusion class='description__welcome-diagram_1_1'>
+                <h3>Телемедицина</h3>
+                <p>медицинская</p>
+            </div>
+            <div data-exclusion class='description__welcome-diagram_1_1'>
+                <h3>СМП</h3>
+                <p>медицинская</p>
+            </div>
+            <div data-exclusion class='description__welcome-diagram_1_1'>
+                <h3>Онкология</h3>
+                <p>медицинская</p>
+            </div>
+            <div data-exclusion class='description__welcome-diagram_1_1'>
+                <h3>МИС</h3>
+                <p>медицинская</p>
             </div>
         </welcome-diagram>
     </welcome-section>
